<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.MoreFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_statusmessage"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/status_message_icon" />

            <Button
                android:id="@+id/btn_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="70dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/right_arrow"
                android:gravity="left|center"
                android:text="@string/status_message" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cv_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/cv_statusmessage">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/status_message_icon" />

            <Button
                android:id="@+id/btn_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="70dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/right_arrow"
                android:gravity="left|center"
                android:text="@string/username" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_profilepicture"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/cv_username">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/iv_profilepic"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btn_changeprofilepic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="70dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/right_arrow"
                android:gravity="left|center"
                android:text="@string/change_profile_pic" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>