<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity.CreateUserListActivity">

    <TextView
        android:id="@+id/tv_nointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_gravity="center"
        android:text="@string/no_internet_connection" />

    <include layout="@layout/chat_screen_toolbar"></include>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:visibility="visible"></android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/create_group_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/groupname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/CounterText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_groupname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"
                android:longClickable="false"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/dark_grey" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/groupdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:longClickable="false"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/CounterText"
            app:layout_constraintTop_toBottomOf="@id/groupname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_groupdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:longClickable="false"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/dark_grey" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_shape"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groupdescription"
            app:layout_constraintWidth_percent="0.45" />

        <Button
            android:id="@+id/btn_creategroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_shape"
            android:text="@string/create"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/groupdescription"
            app:layout_constraintWidth_percent="0.45" />


    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>